--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,18 @@ services:
     networks:
       - dev
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: avito-pr-api-prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    ports:
+      - "9090:9090"
+    networks:
+      - dev
+
 
 volumes:
   postgres_data:
