--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-API_PORT=
+API_PORT=8080
 
-DB_USERNAME=
-DB_NAME=
-DB_PASSWORD=
-DB_PORT=
-DB_URL=
+DB_USERNAME=postgres
+DB_NAME=postgres
+DB_PASSWORD=123123123
+DB_PORT=5432
+DB_URL=postgres://postgres:123123123@avito-pr-api-postgres:5432/postgres?sslmode=disable
